[package]
name = "bleak-blocks"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
macroquad = "0.4.14"
num-format = "0.4.4"
strum = { version = "0.27.2", features = ["derive"] }

[package.metadata.packager]
product-name = "Bleak Blocks"
identifier = "com.xapphire13.bleak-blocks"
copyright = "Xapphire13"
